--- a/templates/Judge/PreviousJudgements.html
+++ b/templates/Judge/PreviousJudgements.html
@@ -174,7 +174,7 @@
                                                         <div class="row"> 
                                                             <div class="form-group label-floating">
                                                                     <label class="control-label">Enter CNR number</label>
-                                                                    <input class="form-control" type="text" name="CNRno"/>
+                                                                    <input class="form-control" type="text" name="CNRno" required="" />
                                                                 </div>
                                                             </div>
                                                     </div>
@@ -226,7 +226,7 @@
                                             <div class="row"> 
                                                 <div class="form-group label-floating">
                                                         <label class="control-label">Enter Details</label>
-                                                        <input class="form-control" type="text" name="Details"/>
+                                                        <input class="form-control" type="text" name="Details" required="" />
                                                     </div>
                                                 </div>
                                         </div>
