--- a/templates/Officer/CaseStatements.html
+++ b/templates/Officer/CaseStatements.html
@@ -199,51 +199,54 @@
                                             </div>
                                         </div>
                                         <div class="row"> 
-                                            <div class="col">
-                                        <div class="col-sm-6 pull-left">
+                                            
+                                        <div class="col-sm-6 ">
                                             
                                                 <div class="form-group label-floating">
-                                                 <input class="form-control" type="text"placeholder="CNR Number" name="CNRno" required=""  />
+                                                     <label>CNR Number</label>
+                                                 <input class="form-control" type="number" name="CNRno" required=""  />
 
 
                                                 </div>
                                             </div>
-                                        </div>
+                                        
                                        
 
                                         
                                
-                                        <div class="col"> 
+                                        
 
                                          <div class="col-sm-6">
                                                 <div class="form-group label-floating">
-                                                        <input class="form-control" type="text"placeholder="Victim Statement" name="VictimStmnt" required=""  />
+                                                     <label>Victim Statement</label>
+                                                        <input class="form-control" type="text" name="VictimStmnt" required=""  />
                                                     </div>
                                                 </div>
                                         </div>
-                                    </div>
+                                    
                                          <div class="row"> 
-                                            <div class="col">
+                                            
                                         <div class="col-sm-6 ">
                                             
                                                 <div class="form-group label-floating">
-                                                 <input class="form-control" type="text"placeholder="Accused Statement" name="AccusedStmnt"   />
+                                                     <label>Accused Statement </label>
+                                                 <input class="form-control" type="text name="AccusedStmnt"   />
 
 
                                                 </div>
                                             </div>
-                                        </div>
-                                       <div class="col">
+                                       
 
 
-                                         <div class="col-sm-6 pull-left">
+                                         <div class="col-sm-6 ">
                                                 <div class="form-group label-floating">
-                                                        <input class="form-control" type="text" placeholder="Acts" name="Acts" required="" />
+                                                    <label>Acts</label>
+                                                        <input class="form-control" type="text"  name="Acts" required="" />
                                                     </div>
                                                 </div>
                                         </div>
                                         
-                                       </div>   
+                                        
     
 
                                             
