--- a/templates/Clients/LawyerRequest.html
+++ b/templates/Clients/LawyerRequest.html
@@ -212,7 +212,9 @@
 
                                          <div class="col-md-4">
                                                 <div class="form-group label-floating">
-                                                    <input class="form-control" type="text"  placeholder="Lawyer ID:{{lawyerid}}"readonly>
+                                                            <label>Lawyer ID</label>
+
+                                                    <input class="form-control" type="text"  placeholder="{{lawyerid}}"readonly>
                                                                 <input class="form-control" type="hidden" name="LawyerID" value="{{lawyerid}}">
 
                                                     </div>
@@ -221,28 +223,32 @@
 
                                          <div class="col-sm-4">
                                                 <div class="form-group label-floating">
-                                                    <label>DESCRIPTION</label>
+                                                    <label>Client Note</label>
                                                         <input class="form-control" type="text" name="Client_Note" required=""  />
                                                     </div>
                                                 </div>
-                                        
+                                        </div>
                                         <div class="row"> 
 
                                          <div class="col-sm-4">
                                                 <div class="form-group label-floating">
-                                                        <input class="form-control" type="text" placeholder="Quotation" name="Quotation" required="" />
+                                                    <label>Quotation</label>
+
+                                                        <input class="form-control" type="number"  name="Quotation" required="" />
                                                     </div>
                                                 </div>
                                        
 
                                         <div class="col-sm-4">
                                                 <div class="form-group label-floating">
-                                                        <input class="form-control" type="text" placeholder="Filing Number"name="FilingNo" required="" />
+                                                    <label>Filing Number</label>
+
+                                                        <input class="form-control" type="number" name="FilingNo" required="" />
                                                     </div>
                                                 </div>
                                         </div>
                                       
-                                    <div class="col-sm-12">
+                                    <div class="col-sm-4">
 
                                         <div class="row text-center" >
 
@@ -315,95 +321,7 @@
             </footer>
         </div>
     </div>
-    <div class="fixed-plugin">
-        <div class="dropdown show-dropdown">
-            <a href="#" data-toggle="dropdown">
-                <i class="fa fa-cog fa-2x"> </i>
-            </a>
-            <ul class="dropdown-menu">
-                <li class="header-title"> Sidebar Filters</li>
-                <li class="adjustments-line">
-                    <a href="javascript:void(0)" class="switch-trigger active-color">
-                        <div class="badge-colors text-center">
-                            <span class="badge filter badge-purple" data-color="purple"></span>
-                            <span class="badge filter badge-blue" data-color="blue"></span>
-                            <span class="badge filter badge-green" data-color="green"></span>
-                            <span class="badge filter badge-orange" data-color="orange"></span>
-                            <span class="badge filter badge-red" data-color="red"></span>
-                            <span class="badge filter badge-rose active" data-color="rose"></span>
-                        </div>
-                        <div class="clearfix"></div>
-                    </a>
-                </li>
-                <li class="header-title">Sidebar Background</li>
-                <li class="adjustments-line">
-                    <a href="javascript:void(0)" class="switch-trigger background-color">
-                        <div class="text-center">
-                            <span class="badge filter badge-white" data-color="white"></span>
-                            <span class="badge filter badge-black active" data-color="black"></span>
-                        </div>
-                        <div class="clearfix"></div>
-                    </a>
-                </li>
-                <li class="adjustments-line">
-                    <a href="javascript:void(0)" class="switch-trigger">
-                        <p>Sidebar Mini</p>
-                        <div class="togglebutton switch-sidebar-mini">
-                            <label>
-                                <input type="checkbox" unchecked="">
-                            </label>
-                        </div>
-                        <div class="clearfix"></div>
-                    </a>
-                </li>
-                <li class="adjustments-line">
-                    <a href="javascript:void(0)" class="switch-trigger">
-                        <p>Sidebar Image</p>
-                        <div class="togglebutton switch-sidebar-image">
-                            <label>
-                                <input type="checkbox" checked="">
-                            </label>
-                        </div>
-                        <div class="clearfix"></div>
-                    </a>
-                </li>
-                <li class="header-title">Images</li>
-                <li class="active">
-                    <a class="img-holder switch-trigger" href="javascript:void(0)">
-                        <img src="/static/static2/assets/img/sidebar-1.jpg" alt="" />
-                    </a>
-                </li>
-                <li>
-                    <a class="img-holder switch-trigger" href="javascript:void(0)">
-                        <img src="/static/static2/assets/img/sidebar-2.jpg" alt="" />
-                    </a>
-                </li>
-                <li>
-                    <a class="img-holder switch-trigger" href="javascript:void(0)">
-                        <img src="/static/static2/assets/img/sidebar-3.jpg" alt="" />
-                    </a>
-                </li>
-                <li>
-                    <a class="img-holder switch-trigger" href="javascript:void(0)">
-                        <img src="/static/static2/assets/img/sidebar-4.jpg" alt="" />
-                    </a>
-                </li>
-                <li class="button-container">
-                    <div class="">
-                        <a href="http://www.creative-tim.com/product/material-dashboard-pro" target="_blank" class="btn btn-rose btn-block">Buy Now</a>
-                    </div>
-                    <div class="">
-                        <a href="http://www.creative-tim.com/product/material-dashboard" target="_blank" class="btn btn-info btn-block">Get Free Demo</a>
-                    </div>
-                </li>
-                <li class="header-title">Thank you for 95 shares!</li>
-                <li class="button-container">
-                    <button id="twitter" class="btn btn-social btn-twitter btn-round"><i class="fa fa-twitter"></i> &middot; 45</button>
-                    <button id="facebook" class="btn btn-social btn-facebook btn-round"><i class="fa fa-facebook-square"> &middot;</i>50</button>
-                </li>
-            </ul>
-        </div>
-    </div>
+   
     {%endif%}
 </body>
 <!--   Core JS Files   -->
