--- a/templates/Clients/Documents.html
+++ b/templates/Clients/Documents.html
@@ -44,6 +44,21 @@
     <!--     Fonts and icons     -->
     <link href="/static/static2/assets/css/font-awesome.css" rel="stylesheet" />
     <link href="/static/static2/assets/css/google-roboto-300-700.css" rel="stylesheet" />
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script>
+        var myVar = setInterval(myTimer, 1000);
+
+        function myTimer() 
+        {
+            var d=document.getElementById('success-msg');
+            //console.log(d);
+            if (d!=null)
+            {
+                swal({ title:"Good job!", text: "Successful!", type: "success", buttonsStyling: false, confirmButtonClass: "btn btn-success"});
+                clearInterval(myVar);
+            }
+        }
+    </script>
 </head>
 
 <body>
@@ -168,19 +183,6 @@
             </nav>
             <div class="content">
                 <div class="container-fluid">
-                    {%if message is defined%}
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="card">
-                                
-                                <div class="card-content">
-                                   
-                                    <h4 class="card-title">{{message}}</h4>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    {%endif%}
 
                     <div class="row">
                         <div class="col-md-12">
@@ -234,38 +236,19 @@
                     </div>
                     </div>
                 </div>
+
+                {% if message=="SUCCESS" %}
+                    <div id="success-msg"></div>                   
+                    {% endif %}
+
             <footer class="footer">
                 <div class="container-fluid">
-                    <nav class="pull-left">
-                        <ul>
-                            <li>
-                                <a href="#">
-                                    Home
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Company
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Portfolio
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    Blog
-                                </a>
-                            </li>
-                        </ul>
-                    </nav>
                     <p class="copyright pull-right">
                         &copy;
                         <script>
                             document.write(new Date().getFullYear())
                         </script>
-                        <a href="http://www.creative-tim.com/">Creative Tim</a>, made with love for a better web
+                        HONOUR, made with love for a better web
                     </p>
                 </div>
             </footer>
